...
                    .accessibilityIdentifier("HomeProgressView")
            } else {
                List {
                    topRatedMoviesList
                    upcomingMoviesList
                }
                .accessibilityIdentifier("HomeList")
                .listStyle(.sidebar)
                .refreshable {
                    vm.loadData()
                }
            }
        }
...
