...
                    NavigationLink {
                        CrewListView(crew: crew)
                    } label: {
                        Text("view_all")
                            .font(.caption)
                            .padding([.leading, .bottom])
                            .accessibilityIdentifier("ViewMoreCasts")
                    }
                }
            }
            
            ScrollView(.horizontal, showsIndicators: false) {
                HStack(spacing: 18) {
...
